# pca_paper

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt
code/decode_helpers/: setup.cfg  setup.py
code/decode_helpers/decode_helpers/: __init__.py  helpers.py
code/notebooks/: README.md  correlation_stats.ipynb  debug_nifti_brain.ipynb  decoding_and_compression.ipynb  decoding_and_compression_voxel.ipynb  helpers.py  network_analyses.ipynb  neurosynth.ipynb  pca_pieman.ipynb  pca_pieman_components.ipynb  pca_pieman_decoding.ipynb  pca_pieman_decoding_networks.ipynb  pca_pieman_feature_importances.ipynb  pca_pieman_plot_networks.ipynb  pie_images.ipynb  simulations.ipynb
code/scripts/: config.py  pieman_pca_analysis.py  pieman_pca_analysis_submit.py  pieman_pca_chunk.py  pieman_pca_chunk_submit.py  pieman_pca_elimination_analysis.py  pieman_pca_elimination_analysis_submit.py  pieman_pca_network_analysis.py  pieman_pca_network_analysis_submit.py  pieman_pca_network_chunk.py  pieman_pca_network_chunk_submit.py  run_job.sh  test_submit.py
data/neurosynth/: cognitive_processes.csv  topics.csv
data/scratch/: decoding_results_100_Default mode_intact.pkl  decoding_results_100_Default mode_paragraph.pkl  decoding_results_100_Default mode_rest.pkl  decoding_results_100_Default mode_word.pkl  decoding_results_100_Dorsal attention_intact.pkl  decoding_results_100_Dorsal attention_paragraph.pkl  (+54 more)
paper/: .#main.tex  boneyard.tex  cdl.bib  changes.tex  compile.sh  main.aux  main.blg  main.tex  old.tex  supplement.dvi  supplement.tex
(+8 files in other folders)
