[metadata]
name = decode_helpers
version = attr: decode_helpers.__version__
description = Helper functions, constants, and scripts for reproducing analyses from https://github.com/ContextLab/pca-paper
author = Lucy Owen, and Jeremy R. Manning
author_email = contextualdynamics@gmail.com
url = https://github.com/ContextLab/pca-paper
download_url = https://github.com/ContextLab/pca-paper
license = MIT

[options]
python_requires = >=3.6
packages = decode_helpers
setup_requires = setuptools>=38.3.0